--- a/pkg/pfv/FlowEngine.ipp.in
+++ b/pkg/pfv/FlowEngine.ipp.in
@@ -15,6 +15,7 @@
 //For pyRunString
 #include<lib/pyutil/gil.hpp>
 #include<pkg/dem/JointedCohesiveFrictionalPM.hpp>
+#include<boost/thread/thread.hpp>
 
 namespace yade { // Cannot have #include directive inside.
 
