Use std::thread instead of boost::thread

--- a/pkg/pfv/FlowEngine.ipp.in
+++ b/pkg/pfv/FlowEngine.ipp.in
@@ -15,7 +15,8 @@
 //For pyRunString
 #include<lib/pyutil/gil.hpp>
 #include<pkg/dem/JointedCohesiveFrictionalPM.hpp>
-#include<boost/thread/thread.hpp>
+#include <thread>
+#include <chrono>
 
 namespace yade { // Cannot have #include directive inside.
 
@@ -116,7 +117,7 @@ void TemplateFlowEngine_@TEMPLATE_FLOW_NAME@<_CellInfo,_VertexInfo,_Tesselation,
 	if (multithread && !first) {
 		while (updateTriangulation && !backgroundCompleted) { /*cout<<"sleeping..."<<sleeping++<<endl;*/
 		  sleeping++;
-		boost::this_thread::sleep(boost::posix_time::microseconds(1000));}
+		std::this_thread::sleep_for(std::chrono::microseconds(1000));}
 		if (debug && sleeping) cerr<<"sleeping..."<<sleeping<<endl;
 		if (updateTriangulation || ((meshUpdateInterval>0  && ellapsedIter>(0.5*meshUpdateInterval)) && backgroundCompleted)) {
 			if (debug) cerr<<"switch flow solver"<<endl;
@@ -148,7 +149,7 @@ void TemplateFlowEngine_@TEMPLATE_FLOW_NAME@<_CellInfo,_VertexInfo,_Tesselation,
 			if (!thermalEngine) updateTriangulation=false;// thermalEngine needs this flag for reynolds numbers updates, let thermalEngine flip this flag back to false
 			epsVolCumulative=0;
 			ellapsedIter=0;
-			boost::thread workerThread(&TemplateFlowEngine_@TEMPLATE_FLOW_NAME@::backgroundAction,this);
+			std::thread workerThread(&TemplateFlowEngine_@TEMPLATE_FLOW_NAME@::backgroundAction,this);
 			workerThread.detach();
 			if (debug) cerr<<"backgrounded"<<endl;
 			initializeVolumes(*solver);
@@ -186,7 +187,6 @@ void TemplateFlowEngine_@TEMPLATE_FLOW_NAME@<_CellInfo,_VertexInfo,_Tesselation,
 	backgroundSolver->factorizeOnly = false;
 	//FIXME(2): and here we need only cached variables, not forces <- this appears to be fixed already inside computeFacetForcesWithCache
 	backgroundSolver->computeFacetForcesWithCache(/*onlyCache?*/ true);
-// 	boost::this_thread::sleep(boost::posix_time::seconds(5));
  	backgroundCompleted = true;
 }
 
