--- a/pkg/pfv/FlowEngine.ipp.in
+++ b/pkg/pfv/FlowEngine.ipp.in
@@ -346,7 +346,7 @@ void TemplateFlowEngine_@TEMPLATE_FLOW_NAME@<_CellInfo,_VertexInfo,_Tesselation,
 		flow.tesselation().cellHandles.push_back(cell);
 		cell->info().id=k++;}//define unique numbering now, corresponds to position in cellHandles
 	flow.tesselation().cellHandles.shrink_to_fit();
-// for fast loop on facets ( useful in thermal engine only)
+	// for fast loop on facets ( useful in thermal engine only)
 	if (thermalEngine){
 		flow.tesselation().facetCells.clear();
 		flow.tesselation().facetCells.reserve(flow.tesselation().Triangulation().number_of_finite_facets());
@@ -540,7 +540,7 @@ void TemplateFlowEngine_@TEMPLATE_FLOW_NAME@<_CellInfo,_VertexInfo,_Tesselation,
 	if ((flow.fluidBulkModulus>0 || thermalEngine) && desiredPorosity>0 && !cell->info().blocked) {
 		cell->info().invVoidVolume() = 1. / cell->info().volume();
 	} else if ((flow.fluidBulkModulus>0 || thermalEngine || iniVoidVolumes) && desiredPorosity == 0 && !cell->info().blocked) {
-		cell->info().invVoidVolume() = 1. / ( std::abs(cell->info().volume()) - flow.volumeSolidPore(cell) );
+		cell->info().invVoidVolume() = 1. / max(0.001*abs(cell->info().volume()),(abs(cell->info().volume()) - flow.volumeSolidPore(cell) ));
 	}
 	}
 	if (debug) cout << "Volumes initialised." << endl;
