--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -259,6 +259,22 @@ test_debug:
     - make_debug
   needs: ["make_debug"]
 
+test_GUI:
+  <<: *platforms_definition
+  <<: *skip_wip_test_definition
+  stage: test
+  script:
+    - if [[ ${SKIP_TEST} == "SKIP_TEST" ]] ; then echo -e "\n\e[93m===\nSkipping GUI test, because it's a WIP merge request.\n===\e[0m\n"; else xvfb-run -s "-screen 0 1600x1200x24" scripts/checks-and-tests/testGui.sh; fi
+    - cat /etc/os-release
+  timeout: 25 minutes
+  image: registry.gitlab.com/yade-dev/docker-yade:debian-bullseye
+  dependencies:
+    - make_debug
+  needs: ["make_debug"]
+  artifacts:
+    paths:
+      - screenshots
+
 test_minimal:
   <<: *test_definition
   <<: *skip_wip_test_definition
