--- a/pkg/pfv/FlowEngine.ipp.in
+++ b/pkg/pfv/FlowEngine.ipp.in
@@ -15,7 +15,7 @@
 //For pyRunString
 #include<lib/pyutil/gil.hpp>
 #include<pkg/dem/JointedCohesiveFrictionalPM.hpp>
-#include <thread>
+#include <boost/thread/thread.hpp>
 #include <chrono>
 
 namespace yade { // Cannot have #include directive inside.
@@ -117,7 +117,7 @@ void TemplateFlowEngine_@TEMPLATE_FLOW_NAME@<_CellInfo,_VertexInfo,_Tesselation,
 	if (multithread && !first) {
 		while (updateTriangulation && !backgroundCompleted) { /*cout<<"sleeping..."<<sleeping++<<endl;*/
 		  sleeping++;
-		boost::this_thread::sleep_for(std::chrono::microseconds(1000));}
+		boost::this_thread::sleep(boost::posix_time::microseconds(1000));}
 		if (debug && sleeping) cerr<<"sleeping..."<<sleeping<<endl;
 		if (updateTriangulation || ((meshUpdateInterval>0  && ellapsedIter>(0.5*meshUpdateInterval)) && backgroundCompleted)) {
 			if (debug) cerr<<"switch flow solver"<<endl;
