--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -199,14 +199,24 @@ make_clang:
   stage: test
   script:
     - if [[ ${SKIP_TEST} == "SKIP_TEST" ]] ; then echo -e "\n\e[93m===\nSkipping this test, because it's a WIP merge request.\n===\e[0m\n"; else install/bin/yade-ci --test; fi
+    - if [[ ${SKIP_TEST} == "SKIP_TEST" ]] || [[ ${NO_GUI} == "NO_GUI" ]] ; then echo -e "\n\e[93m===\nSkipping GUI test.\n===\e[0m\n"; else xvfb-run -a -s "-screen 0 1600x1200x16" scripts/checks-and-tests/testGui.sh; fi
     - cat /etc/os-release
   timeout: 25 minutes
+  artifacts:
+    when: always
+    paths:
+      - screenshots
 
 .skip_wip_test_template: &skip_wip_test_definition
   before_script:
     # there can be only one before_script: it is in a template here. Buy if you need a before_script: for something else (e.g. MPI), this line has to
     # be copied into 'before_script:' there, and the template removed
     - if [[ ${CI_MERGE_REQUEST_TITLE:0:4} == "WIP:" ]] ; then export SKIP_TEST="SKIP_TEST"; else echo "non-WIP merge request detected"; fi
+
+.skip_wip_test_template_nogui: &skip_wip_test_definition_nogui
+  before_script:
+    - if [[ ${CI_MERGE_REQUEST_TITLE:0:4} == "WIP:" ]] ; then export SKIP_TEST="SKIP_TEST"; else echo "non-WIP merge request detected"; fi
+    - export NO_GUI="NO_GUI"
 
 test_16_04:
   <<: *test_definition
@@ -259,27 +269,9 @@ test_debug:
     - make_debug
   needs: ["make_debug"]
 
-test_GUI:
-  # FIXME - possibly move this into test_debug
-  <<: *platforms_definition
-  <<: *skip_wip_test_definition
-  stage: test
-  script:
-    - if [[ ${SKIP_TEST} == "SKIP_TEST" ]] ; then echo -e "\n\e[93m===\nSkipping GUI test, because it's a WIP merge request.\n===\e[0m\n"; else xvfb-run -a -s "-screen 0 1600x1200x16" scripts/checks-and-tests/testGui.sh; fi
-    - cat /etc/os-release
-  timeout: 25 minutes
-  image: registry.gitlab.com/yade-dev/docker-yade:debian-bullseye
-  dependencies:
-    - make_debug
-  needs: ["make_debug"]
-  artifacts:
-    when: always
-    paths:
-      - screenshots
-
 test_minimal:
   <<: *test_definition
-  <<: *skip_wip_test_definition
+  <<: *skip_wip_test_definition_nogui
   image: registry.gitlab.com/yade-dev/docker-yade:debian-bullseye
   dependencies:
     - make_minimal
@@ -295,6 +287,8 @@ test_opposite:
 
 test_suse15:
   <<: *test_definition
+  before_script:
+    - export NO_GUI="NO_GUI"
   image: registry.gitlab.com/yade-dev/docker-yade:suse15
   dependencies:
     - make_suse15
@@ -318,6 +312,8 @@ test_18_foam:
 
 test_18_04_nogui:
   <<: *test_definition
+  before_script:
+    - export NO_GUI="NO_GUI"
   image: registry.gitlab.com/yade-dev/docker-yade:ubuntu18.04_nogui
   dependencies:
     - make_18_04_nogui
