MPI: mp.initialize() enables a primitive python shell after mpiexec + code refactoring

--- a/core/main/main.py.in
+++ b/core/main/main.py.in
@@ -335,28 +335,31 @@ def userSession(gui='none',qapp=None):
 				if not opts.mpi_mode: sys.stderr.write("Running script "+arg0+'\n')
 				try:
 					execfile(script,globals())
-					if (opts.mpi_mode):
-						from yade import mpy as mp
-						if(opts.mit>1): # workers only in mit mode
-							
-							mp.spawnedProcessWaitCommand() #after the script execution, don't exit and wait a command from master.
-						else:
-							mp.MPI.Finalize()
 				except SystemExit: raise
 				except: # all other exceptions
 					import traceback
 					traceback.print_exc()
 					if yade.runtime.opts.exitAfter: sys.exit(1)
-				if yade.runtime.opts.exitAfter: sys.exit(0)
 			runScript(arg0)
-		if yade.runtime.opts.exitAfter: sys.exit(0)
+		if yade.runtime.opts.exitAfter:
+			if opts.mpi_mode:
+				from yade import mpy as mp
+				mp.MPI.Finalize()
+			sys.exit(0)
 	## start interpreter
 	if not opts.mpi_mode:
 		ipshell()
-	else: #if we reach here it means yade is executed by a spawned worker, and without a user script, we go directly to the waitCommand state 
+	else: 	
 		from yade import mpy as mp
-		mp.initialize(mp.numThreads+1) #within the spawned comm master is not visible, hence not counted in numThreads yet (reason for the +1), initialize() will merge them
-		mp.spawnedProcessWaitCommand() #after the script execution, don't exit and wait a command from master.
+		if(not arg0.endswith('.py') and opts.mit<=1): # case of spawned workers without a script
+			mp.initialize(mp.numThreads+1) #within the spawned comm master is not visible, hence not counted in numThreads yet (reason for the +1), initialize() will merge them
+		if opts.mit>1:
+			if mp.rank==0:
+				ipshell()
+			else:
+				mp.spawnedProcessWaitCommand() #after the script execution, don't exit and wait a command from master.
+				mp.MPI.Finalize()
+				sys.exit(0)
 
 ## run userSession in a way corresponding to the features we use:
 gui=None
