--- a/core/main/main.py.in
+++ b/core/main/main.py.in
@@ -52,7 +52,6 @@ par=argparse.ArgumentParser(usage='%s [options] [ simulation.xml[.bz2] | script.
 par.add_argument('-v','--version',help='Print version and exit.',dest='version',action='store_true')
 par.add_argument('-j','--threads',help='Number of OpenMP threads to run; defaults to 1. Equivalent to setting OMP_NUM_THREADS environment variable.',dest='threads',type=int)
 par.add_argument('--cores',help='Set number of OpenMP threads (as \-\-threads) and in addition set affinity of threads to the cores given. Please provide a string with comma-separated core-ids.',dest='cores',type=str)
-par.add_argument('-mit','--mpi-interactive-threads',help='Number of MPI threads (interactive mode, master+spawns). Values <2 disables mit, -mit x sets 1 master and x-1 workers.',dest='mit',default=0,type=int)
 par.add_argument('--update',help='Update deprecated class names in given script(s) using text search & replace. Changed files will be backed up with ~ suffix. Exit when done without running any simulation.',dest='updateScripts',nargs='+')
 par.add_argument('--nice',help='Increase nice level (i.e. decrease priority) by given number.',dest='nice',type=int)
 par.add_argument('-x',help='Exit when the script finishes',dest='exitAfter',action='store_true')
@@ -86,8 +85,8 @@ if opts.script:
 	args.insert(0,opts.script) # for compatibility with userSession(), could be modified in the future
 
 ## Check if this script is exec'd or imported as part of a mpi process
-# If yade is run with mpiexec prefix (on clusters for example), all processes will be in mpi_mode.
-# If yade is run with -mit x(>1), master will disable mpi_mode (for interactivity) and will spawn processes that will be in mpi_mode.
+# If yade is run with mpiexec prefix all processes will be in mpi_mode.
+# If non-mpiexec'd yade spawns workers only workers will be in mpi_mode
 opts.mpi_mode = os.getenv('OMPI_COMM_WORLD_RANK')!=None
 
 ## remove later
@@ -351,15 +350,14 @@ def userSession(gui='none',qapp=None):
 		ipshell()
 	else: 	
 		from yade import mpy as mp
-		if(not arg0.endswith('.py') and opts.mit<=1): # case of spawned workers without a script
-			mp.initialize(mp.numThreads+1) #within the spawned comm master is not visible, hence not counted in numThreads yet (reason for the +1), initialize() will merge them
-		if opts.mit>1:
-			if mp.rank==0:
-				ipshell()
-			else:
-				mp.spawnedProcessWaitCommand() #after the script execution, don't exit and wait a command from master.
-				mp.MPI.Finalize()
-				sys.exit(0)
+		if mp.rank==0:
+			ipshell()
+			mp.sendCommand(list(range(1,mp.numThreads)),"exit",wait=False)
+			mp.MPI.Finalize()
+		else:
+			mp.spawnedProcessWaitCommand() #after the script execution, don't exit and wait a command from master.
+			mp.MPI.Finalize()
+			sys.exit(0)
 
 ## run userSession in a way corresponding to the features we use:
 gui=None
