clean minimal intersection code (see 6df516dcc) + mpiStats for timings

--- a/core/main/main.py.in
+++ b/core/main/main.py.in
@@ -348,6 +348,7 @@ def userSession(gui='none',qapp=None):
 		from yade import mpy as mp
 		if mp.rank==0:
 			if not yade.runtime.opts.exitAfter:
+				mp.waitingCommands=True
 				ipshell()
 			mp.wprint("sending exit command to workers", mp.numThreads)
 			res=mp.sendCommand(list(range(1,mp.numThreads)),"exit",wait=True) # a blocking call to workers, we only finalize after letting them now
